--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,5 +27,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run python
       run: |
-        python relay.py
+        python3 relay.py
 
